# ESP8266-open-rtos

./: .gitignore  README.md  build.gradle  password.txt  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/java/plugin/achdjian/it/: ESP2866SDKSettings.kt  ESP2866SettingsPanel.kt  ESP8266SettingsState.kt  HelloAction.java
src/main/kotlin/esp8266/plugin/achdjian/it/actions/: Settings.kt
src/main/kotlin/esp8266/plugin/achdjian/it/settings/: ESP2866SDKSettings.kt  ESP8266SDKSettings.kt  ESP8266SettingsState.kt
src/main/kotlin/esp8266/plugin/achdjian/it/ui/: ButtonTitleBorder.kt  ButtonTitledBorder.kt  ButtonTitledSeparator.kt  CheckBox.kt  GridLayout2.kt  HexTextField.kt  Information.kt  LayoutBuilder.kt  Panel.kt  Row.kt  TextAndBrowserButton.kt
src/main/kotlin/esp8266/plugin/achdjian/it/wizard/: CMakeCreator.kt  CMakeCrossTool.kt  FlashSize.kt  Utils.kt  WizardData.kt
src/main/kotlin/it/achdjian/plugin/esp8266/: Constants.kt  Icons.kt
src/main/kotlin/it/achdjian/plugin/esp8266/actions/: Settings.kt
src/main/kotlin/it/achdjian/plugin/espparser/: EspressifChoice.kt  EspressifConfig.kt  EspressifMenu.kt
src/main/kotlin/it/achdjian/plugin/serial/: ConnectDisconnectAction.kt  FlashAction.kt  JsscSerialService.kt  NotificationsService.kt  SerialMonitorException.kt  SerialMonitorPanel.kt  SerialMonitorToolWindowFactory.kt  SerialMonitorView.kt  SerialPortData.kt  SerialPortList.kt  SerialService.kt
src/main/kotlin/plugin/achdjian/it/: CMakeCreator.kt  ESP2866SDKSettings.kt  ESP8266SettingsState.kt  FileChooseInput.kt
src/main/kotlin/plugin/achdjian/it/actions/: NewProject.kt
src/main/kotlin/plugin/achdjian/it/ui/: LayoutBuilder.kt  Panel.kt  Row.kt  layout.kt  layoutImpl.kt
src/main/kotlin/plugin/achdjian/it/wizard/: CMakeCreator.kt  CMakeCrossTool.kt  EPS2866ModuleBuilder.kt  ESP2866Data.kt  ESP2866ModuleType.kt  ESP2866NewProject.kt  ESP2866ProjectGenerator.kt  ESP2866WizardPanel.kt  FlashSize.kt  FreeRTOSConfig.kt  MainUserCreator.kt  NewESP2866ProjectForm.kt  NewESP2866ProjectWizard.kt  OTACMakeCreator.kt  Step1.kt  WizardData.kt
src/main/resources/templates/: CMakeLists.txt  CrossCompiler.cmake  program0.ld
src/main/resources/templates/espressif/: CMakeLists.txt  main.c
src/main/resources/templates/espressif/bootloader/: CMakeLists.txt
src/main/resources/templates/espressif/bootloaderSupport/: CMakeLists.txt
src/main/resources/templates/espressif/cjson/: CMakeLists.txt
src/main/resources/templates/espressif/esp8266/: CMakeLists.txt
src/main/resources/templates/espressif/espOS/: CMakeLists.txt
src/main/resources/templates/espressif/freeRTOS/: CMakeLists.txt
src/main/resources/templates/espressif/jsmn/: CMakeLists.txt
src/main/resources/templates/espressif/log/: CMakeLists.txt
src/main/resources/templates/espressif/lwip/: CMakeLists.txt
src/main/resources/templates/espressif/mqtt/: CMakeLists.txt
src/main/resources/templates/espressif/newlib/: CMakeLists.txt
src/main/resources/templates/espressif/nvs_flash/: CMakeLists.txt
src/main/resources/templates/espressif/smartConfig/: CMakeLists.txt
src/main/resources/templates/espressif/spiFlash/: CMakeLists.txt
src/main/resources/templates/espressif/spiffs/: CMakeLists.txt
src/main/resources/templates/espressif/ssl/: CMakeLists.txt
src/main/resources/templates/espressif/tcpipAdapter/: CMakeLists.txt
src/main/resources/templates/espressif/util/: CMakeLists.txt
src/main/resources/templates/espressif3_1/: CMakeLists.txt  main.c
src/main/resources/templates/espressif3_1/appUpdate/: CMakeLists.txt
src/main/resources/templates/espressif3_1/awsIOT/: CMakeLists.txt
src/main/resources/templates/espressif3_1/bootloader/: CMakeLists.txt
src/main/resources/templates/espressif3_1/bootloaderSupport/: CMakeLists.txt
src/main/resources/templates/espressif3_1/cjson/: CMakeLists.txt
src/main/resources/templates/espressif3_1/coap/: CMakeLists.txt
src/main/resources/templates/espressif3_1/esp8266/: CMakeLists.txt
src/main/resources/templates/espressif3_1/espOS/: CMakeLists.txt
src/main/resources/templates/espressif3_1/espTls/: CMakeLists.txt
src/main/resources/templates/espressif3_1/freeRTOS/: CMakeLists.txt
src/main/resources/templates/espressif3_1/heap/: CMakeLists.txt
src/main/resources/templates/espressif3_1/httpClient/: CMakeLists.txt
src/main/resources/templates/espressif3_1/httpServer/: CMakeLists.txt
src/main/resources/templates/espressif3_1/include/: sdkconfig.h
src/main/resources/templates/espressif3_1/jsmn/: CMakeLists.txt
src/main/resources/templates/espressif3_1/ld/: esp8266.common.ld
src/main/resources/templates/espressif3_1/log/: CMakeLists.txt
src/main/resources/templates/espressif3_1/lwip/: CMakeLists.txt
src/main/resources/templates/espressif3_1/mdns/: CMakeLists.txt
src/main/resources/templates/espressif3_1/mqtt/: CMakeLists.txt
src/main/resources/templates/espressif3_1/newlib/: CMakeLists.txt
src/main/resources/templates/espressif3_1/nvs_flash/: CMakeLists.txt
src/main/resources/templates/espressif3_1/pthread/: CMakeLists.txt
src/main/resources/templates/espressif3_1/ringbuffer/: CMakeLists.txt
src/main/resources/templates/espressif3_1/smartConfig/: CMakeLists.txt
src/main/resources/templates/espressif3_1/sodium/: CMakeLists.txt
src/main/resources/templates/espressif3_1/spiFlash/: CMakeLists.txt
src/main/resources/templates/espressif3_1/spiffs/: CMakeLists.txt
src/main/resources/templates/espressif3_1/ssl/: CMakeLists.txt
src/main/resources/templates/espressif3_1/tcpipAdapter/: CMakeLists.txt
src/main/resources/templates/espressif3_1/util/: CMakeLists.txt
src/main/resources/templates/espressif3_1/vfs/: CMakeLists.txt
src/main/resources/templates/espressif3_1/wpaSupplicant/: CMakeLists.txt
src/main/resources/templates/free/: CMakeLists.txt  CMakeLists_ota.txt  mainuser.c  program1.ld
src/main/resources/templates/free/extras/: httpParserCMakeLists.txt  libEspHttpdParserCMakeLists.txt  simpleCMakeLists.txt  spiffsCMakeLists.txt
src/main/resources/templates/free/rboot/: CMakeLists.txt
(+85 files in other folders)
